tekton/pipelines/tekton-board-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poc-tekton-board-ingress
  namespace: tekton-pipelines
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "poc-tekton-board"
    networking.gke.io/managed-certificates: "tekton-poc-board-cert"
    networking.gke.io/v1beta1.FrontendConfig: "tekton-board-frontend-config"
spec:
  rules:
  - host: poc-tekton-board.prow.build.kyma-project.io
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: tekton-dashboard-lb
            port:
              number: 9097
